@@ -1,2 +1,12 @@
 # Snake
 A simple Snake game made using JavaFX library.
+
+### Requirements to run/compile this project.
+* Java 17 and higher.
+* JavaFX installed and properly configured.
+
+### Required VM Options to run in a test environment.
+Use the following VM options to run the project:
+```
+--module-path "PATH_TO_JAVA_FX_SDK\lib" --add-modules javafx.controls
+```
